Remove Kip Engineering from page title for link previews

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Earnings Call Verifier | Kip Engineering</title>
+    <title>Earnings Call Verifier</title>
     <meta name="description" content="Automatically verify executive claims from earnings calls against SEC filings" />
   </head>
   <body class="antialiased">
